--- a/homemanager/templates/warehouse/home.html
+++ b/homemanager/templates/warehouse/home.html
@@ -16,23 +16,12 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-            <form method='POST' action="">
-                {% csrf_token %}
-                <table>
-                    <tr>
-                        <td>{{ form.username.label_tag }}</td>
-                        <td>{{ form.username }}</td>
-                    </tr>
-                    <tr>
-                        <td>{{ form.password.label_tag }}</td>
-                        <td>{{ form.password }}</td>
-                    </tr>
-                    </table>
-                    
-                    <input type="submit" value="login">
+        <h1>
 
-                {{ form.errors }}
+        HOME
 
-            </form>
+        </h1>
+        
+        <script src="" async defer></script>
     </body>
 </html>
