--- a/homemanager/templates/warehouse/home.html
+++ b/homemanager/templates/warehouse/home.html
@@ -56,6 +56,6 @@
     </div>
 
 <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-<script src="{% static 'js/home.js' %}"></script>
+{% comment %} <script src="{% static 'js/home.js' %}"></script> {% endcomment %}
 
 {% endblock %}
